# ipa-gpo-install

./: README.md  ipa-gpo-install.spec  pyproject.toml  setup.py  update-locale.sh
completions/: ipa-gpo-install
data/: 74alt-group-policy.ldif
doc/: ipa-gpo-install.8
doc/ru/: ipa-gpo-install.8
ipa_gpo_install/: actions.py  checks.py  cli.py  config.py
locale/ru/LC_MESSAGES/: ipa-gpo-install.po
plugin/dbus_handlers/: ipa-gpo.conf  org.freeipa.server.create-gpo-structure  org.freeipa.server.delete-gpo-structure
plugin/ipaserver/plugins/: chain.py  gpc.py
plugin/schema.d/: 75-chain.ldif  75-gpc.ldif  75-gpmaster.ldif
plugin/update/: 75-chain.update  75-gpc.update  75-gpmaster.update
src/: __init__.py  actions.py  checks.py  cli.py  logger.py
