[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipa-gpo-install"
version = "0.0.1"
authors = [
    {name = "Danila Skachedubov", email = "skachedubov@altlinux.org"},
]
description = "Utility for preparing FreeIPA for Group Policy Management"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
]
dependencies = [

]

[project.scripts]
ipa-gpo-install = "src.cli:main"

[tool.setuptools]
package-dir = {""= "."}
packages = ["src"]

[tool.setuptools.data-files]
"share/ipa-gpo-install/data" = [""]
"bin" = ["bin/ipa-gpo-install"]
"share/locale/ru/LC_MESSAGES" = ["locale/ru/LC_MESSAGES/ipa-gpo-install.mo"]